--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -28,6 +28,23 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "add the json file\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"add the json file\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
